--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,11 +3,11 @@ workflows:
     name: Android workflow
     environment:
       vars:
-        #KEYSTORE: Encrypted(...) # <-- Put your encrypted keystore file here
-        #KEYSTORE_PATH: '/tmp/keystore.keystore'
-        #KEYSTORE_PASSWORD: Encrypted(...) # <-- Put your encrypted keystore password here
-        #KEY_ALIAS_PASSWORD: Encrypted(...) # <-- Put your encrypted keystore alias password here
-        #KEY_ALIAS: Encrypted(...) # <-- Put your encrypted keystore alias here
+        KEYSTORE: Encrypted(...) # <-- Put your encrypted keystore file here
+        KEYSTORE_PATH: '/tmp/keystore.keystore'
+        KEYSTORE_PASSWORD: Encrypted(...) # <-- Put your encrypted keystore password here
+        KEY_ALIAS_PASSWORD: Encrypted(...) # <-- Put your encrypted keystore alias password here
+        KEY_ALIAS: Encrypted(...) # <-- Put your encrypted keystore alias here
       xcode: 12.4
       node: 12
       npm: 6        
